--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "Der Tracker ist langsam"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "Tracker von Smart Blocking blockiert"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "Erweiterter Werbeblocker AUS. Werbung wird nicht gesperrt."
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "Smart Blocking AN. Tracker-Blockierung wird angepasst, um die Seitenleistung zu optimieren."
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "Smart Blocking AUS. Tracker-Blockierung wird nicht automatisch angepasst."
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "Werbung wurde gesperrt."
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "Tracker-Blockierung wurde angepasst, um die Seitenleistung zu optimieren."
 	},
 	"tooltip_trust": {
@@ -2464,10 +2464,10 @@
 	"enhanced_ad_blocking": {
 		"message": "Besserer Werbeblocker"
 	},
-	"smart_blocking": {
+	"smart_browsing": {
 		"message": "Smart Blocking"
 	},
-	"smart_blocking_DESC": {
+	"smart_browsing_DESC": {
 		"message": "Tracker automatisch blockieren und entsperren, um die Seitenperformance zu optimieren."
 	},
 	"ad_blocking_DESC": {
