--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "Tracker is slow"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "Tracker blocked by Smart Browsing"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "Ad-Blocking OFF. Advertisements will not be blocked."
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "Smart Browsing ON. Tracker blocking will be adjusted to optimize page performance."
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "Smart Browsing OFF. Tracker blocking will not be automatically adjusted."
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "Advertisements have been blocked."
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "Tracker blocking adjusted to optimize page performance."
 	},
 	"tooltip_trust": {
