--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "Le mouchard est lent"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "Outil de pistage bloqué par Smart Blocking"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "Blocage amélioré des publicités DÉSACTIVÉ Les publicités ne seront pas bloquées."
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "Blocage intelligent ACTIVÉ. Le blocage des mouchards sera ajusté pour améliorer les performances de la page."
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "Blocage intelligent DÉSACTIVÉ. Le blocage des mouchards ne sera pas ajusté automatiquement."
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "Les publicités ont été bloquées."
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "Blocage des mouchards ajusté pour améliorer les performances de la page."
 	},
 	"tooltip_trust": {
@@ -2464,10 +2464,10 @@
 	"enhanced_ad_blocking": {
 		"message": "Blocage amélioré des publicités"
 	},
-	"smart_blocking": {
+	"smart_browsing": {
 		"message": "Blocage intelligent"
 	},
-	"smart_blocking_DESC": {
+	"smart_browsing_DESC": {
 		"message": "Bloquer et débloquer automatiquement les mouchards pour optimiser les performances des pages."
 	},
 	"ad_blocking_DESC": {
