--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "トラッカーが遅いです"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "トラッカーがスマート・ブロッキングによってブロックされました"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "強化された広告ブロッキングがオフになりました。広告はブロックされません。"
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "スマート・ブロッキングがオンになりました。ページのパフォーマンスを最適化するために、トラッカー・ブロッキングを調整します。"
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "スマート・ブロッキングがオフになりました。トラッカー・ブロッキングは自動的に調整されません。"
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "広告がブロックされました。"
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "ページのパフォーマンスを最適化するために、トラッカー・ブロッキングを調整しました。"
 	},
 	"tooltip_trust": {
@@ -2464,10 +2464,10 @@
 	"enhanced_ad_blocking": {
 		"message": "強化された広告ブロッキング"
 	},
-	"smart_blocking": {
+	"smart_browsing": {
 		"message": "スマート・ブロッキング"
 	},
-	"smart_blocking_DESC": {
+	"smart_browsing_DESC": {
 		"message": "トラッカーを自動的にブロックおよびブロック解除して、ページのパフォーマンスを最適化します。"
 	},
 	"ad_blocking_DESC": {
