--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "Tracker is langzaam"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "Tracker geblokkeerd door Smart Blocking"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "Versterkte Ad Blokkering UIT. Advertenties zullen niet worden geblokkeerd."
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "Slim Blokkeren AAN. Tracker blokkering wordt aangepast om prestaties van de pagina te optimaliseren."
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "Slim Blokkeren UIT. Tracker blokkering zal niet automatisch worden aangepast."
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "Advertenties zijn geblokkeerd."
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "Tracker blokkering aangepast om prestaties van de pagina te optimaliseren."
 	},
 	"tooltip_trust": {
@@ -2464,10 +2464,10 @@
 	"enhanced_ad_blocking": {
 		"message": "Versterkte Ad Blokkering"
 	},
-	"smart_blocking": {
+	"smart_browsing": {
 		"message": "Slim Blokkeren"
 	},
-	"smart_blocking_DESC": {
+	"smart_browsing_DESC": {
 		"message": "Blokkeer en deblokkeer trackers automatisch om pagina-performance te optimaliseren."
 	},
 	"ad_blocking_DESC": {
