--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -674,7 +674,7 @@
 	"panel_tracker_warning_slow_tooltip": {
 		"message": "Tropiciel spowalnia działanie"
 	},
-	"panel_tracker_warning_smartblock_tooltip": {
+	"panel_tracker_warning_smartbrowse_tooltip": {
 		"message": "Tropiciel zablokowany przez Blokowanie inteligentne"
 	},
 	"panel_tracker_warning_smartunblock_tooltip": {
@@ -1145,10 +1145,10 @@
 	"alert_ad_block_off": {
 		"message": "Wzmocnione blokowanie reklam WYŁĄCZONE. Reklamy nie będą blokowane."
 	},
-	"alert_smart_block_on": {
+	"alert_smart_browse_on": {
 		"message": "Blokowanie inteligentne WŁĄCZONE. Blokowanie tropicieli będzie dostosowywane w celu zoptymalizowania wydajności strony."
 	},
-	"alert_smart_block_off": {
+	"alert_smart_browse_off": {
 		"message": "Blokowanie inteligentne WYŁĄCZONE. Blokowanie tropicieli nie będzie dostosowywane automatycznie."
 	},
 	"alert_reload": {
@@ -1175,7 +1175,7 @@
 	"tooltip_ad_block_on": {
 		"message": "Zablokowano reklamy."
 	},
-	"tooltip_smart_block_on": {
+	"tooltip_smart_browse_on": {
 		"message": "Blokowanie tropicieli dostosowane w celu zoptymalizowania wydajności strony."
 	},
 	"tooltip_trust": {
@@ -2464,10 +2464,10 @@
 	"enhanced_ad_blocking": {
 		"message": "Wzmocnione blokowanie reklam"
 	},
-	"smart_blocking": {
+	"smart_browsing": {
 		"message": "Blokowanie inteligentne"
 	},
-	"smart_blocking_DESC": {
+	"smart_browsing_DESC": {
 		"message": "Automatycznie blokuj i odblokowuj tropiciele w celu zoptymalizowania wydajności strony."
 	},
 	"ad_blocking_DESC": {
