Update historical stats learn more link

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2099,7 +2099,7 @@
 				"content": "</a>"
 			},
 			"link_start": {
-				"content": "<br><a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.ghostery.com/products/plus?utm_source=gbe&utm_campaign=in_app_hstats_lm\">"
+				"content": "<br><a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.ghostery.com/pricing?utm_source=gbe&utm_campaign=in_app_hstats_lm\">"
 			}
 		}
 	},
