Change user-facing purple box to tracker tally

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -191,10 +191,10 @@
 		}
 	},
 	"box_hide": {
-		"message": "Hide Box"
+		"message": "Hide Tally"
 	},
 	"box_hide_expanded": {
-		"message": "Hide Purple Box"
+		"message": "Hide Tracker-Tally"
 	},
 	"box_looking": {
 		"message": "Looking"
@@ -821,8 +821,8 @@
 	"settings_adblocker_list_3": {
 		"message": "Ads + Trackers + Annoyances"
 	},
-	"settings_purple_box": {
-		"message": "Purple Box"
+	"settings_tracker_tally": {
+		"message": "Tracker-Tally"
 	},
 	"settings_notifications": {
 		"message": "Notifications"
@@ -881,8 +881,8 @@
 	"settings_block_trackers": {
 		"message": "Block new trackers added to Ghostery by default"
 	},
-	"settings_show_purple_box": {
-		"message": "Show the purple box in the corner of my browser"
+	"settings_show_tracker_tally": {
+		"message": "Show the tracker-tally in the corner of my browser"
 	},
 	"settings_dismiss_after": {
 		"message": "Dismiss After"
@@ -909,7 +909,7 @@
 		"message": "secs"
 	},
 	"settings_hide_alert_trusted": {
-		"message": "Hide the purple box on trusted websites"
+		"message": "Hide the tracker-tally on trusted websites"
 	},
 	"settings_notify_me": {
 		"message": "Notify me when Ghostery:"
@@ -1025,8 +1025,8 @@
 	"settings_allow_trackers_tooltip": {
 		"message": "For example, blocking a Facebook tracker on facebook.com might break the site."
 	},
-	"settings_show_purple_box_tooltip": {
-		"message": "The purple box is a real-time list of trackers that is displayed in the corner of your browser. This feature will help you see trackers as they are added onto a webpage."
+	"settings_show_tracker_tally_tooltip": {
+		"message": "The tracker-tally is a list in the corner of your browser that displays trackers as they load in real-time."
 	},
 	"settings_notify_me_tooltip": {
 		"message": "Allow Ghostery to show messages in my browser related to new product features, updates, and customer feedback."
